--- a/App/assets/locales/bg/translation.json
+++ b/App/assets/locales/bg/translation.json
@@ -117,7 +117,7 @@
   "gpu-setup":"GPU настройване",
   "system-requirements": "Системни изисквания",
   "or-higher":"или по-високо",
-  "python-version":"Ако Python все още не е инсталиран на вашата система, изтеглете и инсталирайте версия между Python 3.8 и Python 3.11 от ",
+  "python-version":"Ако Python все още не е инсталиран на вашата система, изтеглете и инсталирайте Python 3.9 от ",
   "official-python-website": "Офицалния уебсайт на Python",
   "check-python-path": " Уверете се, че сте маркирали опцията за добавяне на Python към системния PATH по време на инсталацията.",
   "open-command-prompt": "Отваряне на командния прозорец",
