Adding translation to CreateModel Page

--- a/App/assets/locales/bg/translation.json
+++ b/App/assets/locales/bg/translation.json
@@ -231,6 +231,10 @@
   "data-does-not-match-title":"Информацията не съвпада",
   "data-does-not-match-message":"Информацията във файла няма подходяща форма. Осигурете се, че файлът или съдържа толкова колони, колкото са очаквани, или всяка колона съдържа заглавие.",
   "error-opening-file-title":"Грешка при отваряне на файл",
-  "error-opening-file-message":"Имаше грешка при четенето на информация от файл. Може би файлът не съществува."
+  "error-opening-file-message":"Имаше грешка при четенето на информация от файл. Може би файлът не съществува.",
+  "train":"Трениране",
+  "test":"Тестване",
+  "nodes":"Връзки",
+  "rate":"Процент"
 
 }
