--- a/App/assets/locales/en/translation.json
+++ b/App/assets/locales/en/translation.json
@@ -231,5 +231,9 @@
   "data-does-not-match-title":"No matching data",
   "data-does-not-match-message":"The data doesn't match the expected shape. Make sure you either have exactly as many columns as expected or that your data contains headers.",
   "error-opening-file-title":"Error opening file",
-  "error-opening-file-message":"An error occured when trying to read information from a file. Maybe the file doesn't exist."
+  "error-opening-file-message":"An error occured when trying to read information from a file. Maybe the file doesn't exist.",
+  "train":"Traning",
+  "test":"Testing",
+  "nodes":"Nodes",
+  "rate":"Rate"
 }
