Add translation to errors

--- a/App/assets/locales/bg/translation.json
+++ b/App/assets/locales/bg/translation.json
@@ -235,6 +235,12 @@
   "train":"Трениране",
   "test":"Тестване",
   "nodes":"Връзки",
-  "rate":"Процент"
+  "rate":"Процент",
+  "val-data-expected-5%-or-more":"Данните за Валидация трябва да се 5% или повече",
+  "train-data-expected-10%-or-more":"Данните за трениране трябва да са 10% или повече",
+  "test-data-expected-1%-or-more": "Данните за тестване трябва да са 1% или повече",
+  "test-manually":"Тестване ръчно"
+  
+
 
 }
