--- a/App/assets/locales/en/translation.json
+++ b/App/assets/locales/en/translation.json
@@ -235,5 +235,10 @@
   "train":"Traning",
   "test":"Testing",
   "nodes":"Nodes",
-  "rate":"Rate"
+  "rate":"Rate",
+  "val-data-expected-5%-or-more":"Validation Data Expected 5% or More",
+  "train-data-expected-10%-or-more":"Train Data Expected 10% or More",
+  "test-data-expected-1%-or-more": "Test Data Expected 1% or More",
+  "test-manually":"Test Manually"
+
 }
