Add translation to graphics

--- a/App/assets/locales/bg/translation.json
+++ b/App/assets/locales/bg/translation.json
@@ -240,5 +240,11 @@
   "test-data-expected-1%-or-more": "Данните за тестване трябва да са 1% или повече",
   "test-manually":"Тестване ръчно",
   "values-missing-title":"Данни липсват",
-  "values-missing-message":"Някои данни липсват. Осигурете се, че сте попълнили всички данни."
+  "values-missing-message":"Някои данни липсват. Осигурете се, че сте попълнили всички данни.",
+  "train-loss":"Загуба при трениране",
+  "val-loss":"Загуба при валидация",
+  "test-loss":"Загуба при тестване",
+  "train-accuracy": "Точност при трениране",
+  "val-accuracy": "Точност при валидация",
+  "test-accuracy": "Точност при тестване"
 }
