Add some translation to errors

--- a/App/assets/locales/bg/translation.json
+++ b/App/assets/locales/bg/translation.json
@@ -246,5 +246,7 @@
   "test-loss":"Загуба при тестване",
   "train-accuracy": "Точност при трениране",
   "val-accuracy": "Точност при валидация",
-  "test-accuracy": "Точност при тестване"
+  "test-accuracy": "Точност при тестване",
+  "model-not-yet-loaded-title":"Моделът все още не е заредил.",
+  "model-not-yet-loaded-message":"Моделът все още не е заредил.. Изчакайте няколко секунди"
 }
