Correcting translation in homepage

--- a/App/assets/locales/bg/translation.json
+++ b/App/assets/locales/bg/translation.json
@@ -41,7 +41,7 @@
   "name": "Име",
   "delete-image": "Изтрий снимка",
   "create-model": "Създай модел",
-  "create-dataset": "Създай на набор от данни",
+  "create-dataset": "Създай набор от данни",
   "dataset-type": "Вид на набор от данни",
   "dataset": "Набор от данни",
   "hidden-layers": "Скрит слой",
